@@ -1,5 +1,7 @@
 2008-04-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
+	* src/win32/VcamWin.cpp: mutex for access to input device.
+
 	* wrapper/win32/ShmemBus.h: start using shmem on windows to
 	decouple image acquisition and processing from activex voodoo.
 
